# evm-sol-bridge

./: Anchor.toml  README.md  package-lock.json  package.json
programs/sol_bridge/: Cargo.toml
programs/sol_bridge/src/: constants.rs  error.rs  event.rs  lib.rs
programs/sol_bridge/src/instructions/: bridge_token.rs  initialize.rs  mod.rs  sol_bridge.rs
programs/sol_bridge/src/state/: bridge.rs  mod.rs
tests/: sol_bridge.ts
